--- a/index.html
+++ b/index.html
@@ -14,6 +14,7 @@
     <!-- <script src="imc.js"></script> -->
     <!-- <script src="time_of_day.js"></script> -->
     <!-- <script src="gender.js"></script> -->
-    <script src="spell.js"></script>
+    <!-- <script src="spell.js"></script> -->
+    <script src="calculator.js"></script>
 </body>
 </html>
