--- a/index.html
+++ b/index.html
@@ -15,6 +15,9 @@
     <!-- <script src="time_of_day.js"></script> -->
     <!-- <script src="gender.js"></script> -->
     <!-- <script src="spell.js"></script> -->
-    <script src="calculator.js"></script>
+    <!-- <script src="calculator.js"></script> -->
+    <!-- <script src="tab0.js"></script> -->
+    <!-- <script src="tab1.js"></script> -->
+    <script src="tab2.js"></script>
 </body>
 </html>
