--- a/dom1/index.html
+++ b/dom1/index.html
@@ -10,9 +10,11 @@
     <header>
         <a href="#">Click me</a>
         <button>Hover me</button>
+        <button class="button" id="colorChange">Click me</button>
     </header>
 
    <script src="listen.js"></script>
+   <script src="timer.js"></script>
 
 </body>
 </html>
