--- a/dom1/realtimer.html
+++ b/dom1/realtimer.html
@@ -7,14 +7,13 @@
     <link rel="stylesheet" href="style.css">
 
 <body>
-    <header>
-        <a href="#">Click me</a>
-        <button>Hover me</button>
-        <button class="button" id="colorChange">Coolor</button>
-    </header>
+    <main>
+        <h1>Timer</h1>
+        <button>Start</button>
+        <h2></h2>
+    </main>
 
-   <script src="listen.js"></script>
-   <script src="timer.js"></script>
+   <script src="realtimer.js"></script>
 
 </body>
 </html>
