rightprice: added autoplay

--- a/rightprice/rightprice.html
+++ b/rightprice/rightprice.html
@@ -19,6 +19,7 @@
         <input class="hidden" type="number" id="input-guess">
         <input class="hidden" type="button" id="bt-guess" value="Guess">
         <button id="bt-start">Start</button>
+        <button id="bt-auto">Auto-Play</button>
         <button class="hidden" id="bt-stop">Stop</button>
         <p id="text-result"></p>
         <p class="hidden" id="text-score">Score: <span id="score"></span></p>
