--- a/objects/objects.html
+++ b/objects/objects.html
@@ -9,6 +9,7 @@
 <body>
     
     <!-- <script src="obj_old.js"></script> -->
-    <script src="game.js"></script>
+    <!-- <script src="game.js"></script> -->
+    <script src="block.js"></script>
 </body>
 </html>
