picsum: added some buttons

--- a/fetch/picsum.html
+++ b/fetch/picsum.html
@@ -12,6 +12,8 @@
     <div class="full-container">
         <header>
             <h1>Picsum Pics</h1>
+            <button id="reload">Recharger</button>
+            <button id="next">Suivante</button>
         </header>
 
         <main>
