picsum: added prev button

--- a/fetch/picsum.html
+++ b/fetch/picsum.html
@@ -12,7 +12,8 @@
     <div class="full-container">
         <header>
             <h1>Picsum Pics</h1>
-            <button id="reload">Recharger</button>
+            <button id="previous">Précédente</button>
+            <button id="reload">Aléatoire</button>
             <button id="next">Suivante</button>
         </header>
 
