added picsum_alt.js - in progress

--- a/fetch/picsum.html
+++ b/fetch/picsum.html
@@ -18,10 +18,19 @@
         </header>
 
         <main>
-
+            <div class="hidden">
+                <div id="card-sample" class="item-container">
+                    <div class="info-container">
+                        <h3 class="card-author"></h3>
+                        <a href="" class="card-link">Visit</a>
+                    </div>
+                    <img src="" alt="" class="card-img">
+                </div>
+            </div>
         </main>
     </div>
 
-    <script src="picsum.js"></script>
+    <!-- <script src="picsum.js"></script> -->
+    <script src="picsum_alt.js"></script>
 </body>
 </html>
